--- a/css/style.css
+++ b/css/style.css
@@ -202,8 +202,21 @@ nav a:hover {
   color: var(--dirty-green);
   margin-bottom: 20px;
 }
+
+.text {
+  margin: 90px 15px;
+}
+
+.text h1 {
+  font-size: clamp(43px, 2vw, 80px);
+  font-weight: bold;
+  text-align: center;
+  color: var(--dirty-green);
+  margin-bottom: 20px;
+}
+
 .about p{
-  padding-right: 20px;
+  /* padding-right: 20px; */
 }
 
 .hamburger {
